--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ class: center, middle
 
 # TRLN Library Carpentry Workshop
       
-## Day 2 Summary and Day 3 Plan
+## Day 2 Summary and Day 3 Plan (change added by Deseree)
       
 ---
 
